@@ -6500,3 +6500,4 @@ v0.92.0.11:
   - API: Add TeleportOutlawEvent.
     - Allows for a plugin to cancel an outlaw being teleported out of a town.
     - Closes #5109.
+  - API: Add TownyAPI.getResident(Player) and TownyAPI.getTownyWorld(World).
